--- a/traintime.html
+++ b/traintime.html
@@ -27,7 +27,7 @@
                         <h3 class="panel-title">Current Train Schedule</h3>
                     </div>
                     <div class="panel-body">
-                        <table class="table">
+                        <table class="table" id="trainTable">
                             <thead>
                                 <tr>
                                     <th>Train Name</th>
@@ -61,13 +61,13 @@
                             </div>
                             <div class="form-group">
                                 <label for="inputTrainTime">First Train Time (HH:mm - military time)</label>
-                                <input type="time" class="form-control" id="trainTime" placeholder="">
+                                <input type="text" class="form-control" id="trainTime" placeholder="">
                             </div>
                             <div class="form-group">
                                 <label for="inputTrainFrequency">Frequency (min)</label>
                                 <input type="text" class="form-control" id="trainFrequency" placeholder="">
                             </div>
-                            <button type="submit" class="btn btn-default" class="submitTrain">Submit</button>
+                            <button type="submit" class="btn btn-default" id="submitTrain">Submit</button>
                     </div>
                     </form>
                 </div>
@@ -76,7 +76,7 @@
     </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script scr="assets/javascript/main.js"></script>
+   <script src="assets/javascript/main.js"></script>
 </body>
 
 </html>
