--- a/traintime.html
+++ b/traintime.html
@@ -6,23 +6,23 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://www.gstatic.com/firebasejs/3.7.1/firebase.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
 <body>
-    <div class="container">
+    <div class="container text-center">
         <div class="row">
             <div class="col-md-12">
-                <div class="jumbotron">
-                    <h1>Anytime is Train Time</h1>
-                    <p>Choo Choo. Chee Chee.</p>
-                </div>
+                    <div class="jumbotron container-shadow">
+                        <h1>Anytime is Train Time<br/><small class="current-time"></small></h1>
+                    </div>
             </div>
         </div>
     </div>
     <div class="container main">
         <div class="row">
             <div class="col-md-12">
-                <div class="panel panel-default">
+                <div class="panel panel-default container-shadow">
                     <div class="panel-heading">
                         <h3 class="panel-title">Current Train Schedule</h3>
                     </div>
@@ -45,7 +45,7 @@
         </div>
         <div>
             <div>
-                <div class="panel panel-default">
+                <div class="panel panel-default container-shadow">
                     <div class="panel-heading">
                         <h3 class="panel-title">Add Train</h3>
                     </div>
